@@ -1,5 +1,10 @@
 2004-09-26  Bart Hakvoort  <gparted@users.sf.net>
 
+	*	src/Dialog_Base_Partition.cc,
+		src/	Dialog_Partition_New.cc: fixed alignment problems with some languages
+
+2004-09-26  Bart Hakvoort  <gparted@users.sf.net>
+
 	*	src/Win_GParted.cc: fixed bug that occured while converting the filesystem of a new partition
 	*	src/Dialog_About.cc: removed "documented by" tab (didn't need it yet) and fixed alignments of button
 	with some languages.
